add all records to blog

--- a/_posts/2010-05-21-ldap.html
+++ b/_posts/2010-05-21-ldap.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "4497904825125786296"
     comments: "1"
-categories: [ldap]
+categories: [ldap, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
