--- a/_posts/2010-05-26-java.html
+++ b/_posts/2010-05-26-java.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7169022346012539431"
     comments: "0"
-categories: 
+categories: [blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
