--- a/_posts/2010-10-17-maven-3.html
+++ b/_posts/2010-10-17-maven-3.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7465867751547244566"
     comments: "2"
-categories: [maven]
+categories: [maven, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
