--- a/_posts/2011-02-16-blog-post.html
+++ b/_posts/2011-02-16-blog-post.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "4162018385651196954"
     comments: "1"
-categories: [java, exceptions]
+categories: [java, exceptions, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
