--- a/_posts/2011-04-30-blog-post.html
+++ b/_posts/2011-04-30-blog-post.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "81118174936560390"
     comments: "1"
-categories: [рефакторинг, мысли в слух]
+categories: [рефакторинг, мысли в слух, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
