--- a/_posts/2011-05-10-git.html
+++ b/_posts/2011-05-10-git.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "5365623673481931832"
     comments: "1"
-categories: [git, vcs]
+categories: [git, vcs, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
