--- a/_posts/2011-12-30-nuodb-introduction-video.html
+++ b/_posts/2011-12-30-nuodb-introduction-video.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "3321387836212369083"
     comments: "0"
-categories: [sql, nosql, database]
+categories: [sql, nosql, database, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
