--- a/_posts/2012-08-05-prototyping-with-groovy.html
+++ b/_posts/2012-08-05-prototyping-with-groovy.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7145325113912378974"
     comments: "0"
-categories: [prototype, groovy]
+categories: [prototype, groovy, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/100333702426456197655?rel=author"
