--- a/_posts/2013-05-11-dozer-vs-orika-vs-manual.html
+++ b/_posts/2013-05-11-dozer-vs-orika-vs-manual.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "2757051152007371573"
     comments: "3"
-categories: [performance, java, orika, dozer]
+categories: [performance, java, orika, dozer, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/100333702426456197655?rel=author"
