--- a/_posts/2010-05-13-xml-shema-pojo-maven.html
+++ b/_posts/2010-05-13-xml-shema-pojo-maven.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "3886033543297407183"
     comments: "0"
-categories: [java, jaxb, maven]
+categories: [java, jaxb, maven, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
