--- a/_posts/2010-05-21-flex.html
+++ b/_posts/2010-05-21-flex.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "1935664927010213921"
     comments: "0"
-categories: [flex, функциональное программирование]
+categories: [flex, функциональное программирование, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
