--- a/_posts/2010-05-27-epson.html
+++ b/_posts/2010-05-27-epson.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "356092024160987214"
     comments: "1"
-categories: [epson, пользовательский интерфейс]
+categories: [epson, пользовательский интерфейс, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
