--- a/_posts/2010-06-04-factory-method.html
+++ b/_posts/2010-06-04-factory-method.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7809878594235733395"
     comments: "4"
-categories: [java, concurrency]
+categories: [java, concurrency, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
