--- a/_posts/2010-06-05-gwt-spring-framework-30.html
+++ b/_posts/2010-06-05-gwt-spring-framework-30.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "8307570701478000655"
     comments: "2"
-categories: [java, gwt, spring]
+categories: [java, gwt, spring, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
