--- a/_posts/2010-06-29-blog-post.html
+++ b/_posts/2010-06-29-blog-post.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "8723935807684420812"
     comments: "2"
-categories: [off topic]
+categories: [off topic, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
