--- a/_posts/2010-06-29-blog-post_29.html
+++ b/_posts/2010-06-29-blog-post_29.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "6852892814650188531"
     comments: "4"
-categories: [hardware, off topic]
+categories: [hardware, off topic, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
