--- a/_posts/2010-06-29-opensso-cookie.html
+++ b/_posts/2010-06-29-opensso-cookie.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7483261205902618932"
     comments: "0"
-categories: [java, opensso, openam]
+categories: [java, opensso, openam, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
