--- a/_posts/2010-10-03-gwt.html
+++ b/_posts/2010-10-03-gwt.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "3872258295166107633"
     comments: "2"
-categories: [оптимизация, gwt]
+categories: [оптимизация, gwt, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
