--- a/_posts/2010-11-27-blog-post.html
+++ b/_posts/2010-11-27-blog-post.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "2136653079578358197"
     comments: "0"
-categories: [java, spring]
+categories: [java, spring, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
