--- a/_posts/2011-06-01-default-layout-in-grails.html
+++ b/_posts/2011-06-01-default-layout-in-grails.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "276276943925509020"
     comments: "1"
-categories: [sitemesh, templates, grails]
+categories: [sitemesh, templates, grails, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
