--- a/_posts/2011-07-18-unit.html
+++ b/_posts/2011-07-18-unit.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "6981912396432484664"
     comments: "2"
-categories: [unit testing]
+categories: [unit testing, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
