--- a/_posts/2011-09-04-blog-post.html
+++ b/_posts/2011-09-04-blog-post.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7338956230361746101"
     comments: "4"
-categories: 
+categories: [blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
