--- a/_posts/2011-09-05-blog-post.html
+++ b/_posts/2011-09-05-blog-post.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "4151988794901351459"
     comments: "0"
-categories: [ООП]
+categories: [ООП, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
