--- a/_posts/2011-09-12-proxy-product-owner.html
+++ b/_posts/2011-09-12-proxy-product-owner.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "4168399796371521023"
     comments: "1"
-categories: [Outsourcing, Scrum, Agile, Product owner]
+categories: [Outsourcing, Scrum, Agile, Product owner, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
