--- a/_posts/2011-10-05-rest.html
+++ b/_posts/2011-10-05-rest.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "6095342783124106002"
     comments: "0"
-categories: [HTTP, REST]
+categories: [HTTP, REST, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
