--- a/_posts/2011-10-14-buggy-for-loop-in-java-vm-6-x64.html
+++ b/_posts/2011-10-14-buggy-for-loop-in-java-vm-6-x64.html
@@ -11,7 +11,7 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7888394236197116475"
     comments: "0"
-categories: [java, bug]
+categories: [java, bug, blog]
 author: 
     name: "Anatoliy Sokolenko"
     url: "https://plus.google.com/110772590697104801292?rel=author"
