--- a/_posts/2010-05-26-java.html
+++ b/_posts/2010-05-26-java.html
@@ -12,10 +12,7 @@ blogger:
     postid: "7169022346012539431"
     comments: "0"
 categories: [blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
