--- a/_posts/2012-08-05-prototyping-with-groovy.html
+++ b/_posts/2012-08-05-prototyping-with-groovy.html
@@ -12,10 +12,7 @@ blogger:
     postid: "7145325113912378974"
     comments: "0"
 categories: [prototype, groovy, blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/100333702426456197655?rel=author"
-    image: "http://img2.blogblog.com/img/b16-rounded.gif"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
