--- a/_posts/2010-06-04-factory-method.html
+++ b/_posts/2010-06-04-factory-method.html
@@ -12,10 +12,7 @@ blogger:
     postid: "7809878594235733395"
     comments: "4"
 categories: [java, concurrency, blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
