--- a/_posts/2010-06-29-blog-post.html
+++ b/_posts/2010-06-29-blog-post.html
@@ -12,10 +12,7 @@ blogger:
     postid: "8723935807684420812"
     comments: "2"
 categories: [off topic, blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
