--- a/_posts/2010-06-29-opensso-cookie.html
+++ b/_posts/2010-06-29-opensso-cookie.html
@@ -12,10 +12,7 @@ blogger:
     postid: "7483261205902618932"
     comments: "0"
 categories: [java, opensso, openam, blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
