--- a/_posts/2011-07-18-unit.html
+++ b/_posts/2011-07-18-unit.html
@@ -12,10 +12,7 @@ blogger:
     postid: "6981912396432484664"
     comments: "2"
 categories: [unit testing, blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
