--- a/_posts/2011-09-12-proxy-product-owner.html
+++ b/_posts/2011-09-12-proxy-product-owner.html
@@ -12,10 +12,7 @@ blogger:
     postid: "4168399796371521023"
     comments: "1"
 categories: [Outsourcing, Scrum, Agile, Product owner, blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
