--- a/_posts/2011-10-14-buggy-for-loop-in-java-vm-6-x64.html
+++ b/_posts/2011-10-14-buggy-for-loop-in-java-vm-6-x64.html
@@ -12,10 +12,7 @@ blogger:
     postid: "7888394236197116475"
     comments: "0"
 categories: [java, bug, blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
