--- a/_posts/2013-05-11-dozer-vs-orika-vs-manual.html
+++ b/_posts/2013-05-11-dozer-vs-orika-vs-manual.html
@@ -12,10 +12,7 @@ blogger:
     postid: "2757051152007371573"
     comments: "3"
 categories: [performance, java, orika, dozer, blog]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/100333702426456197655?rel=author"
-    image: "http://img2.blogblog.com/img/b16-rounded.gif"
+comments: true
 ---
 
 <div class="css-full-post-content js-full-post-content">
