--- a/_posts/DRAFT--GWT-JSNI.html
+++ b/_posts/DRAFT--GWT-JSNI.html
@@ -12,10 +12,7 @@ blogger:
     postid: "3069068320476988066"
     comments: "0"
 categories: 
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 published: "false"
 ---
 
