--- a/_posts/DRAFT-Maven-Command-Line-Interface.html
+++ b/_posts/DRAFT-Maven-Command-Line-Interface.html
@@ -12,10 +12,7 @@ blogger:
     postid: "9014699189922860989"
     comments: "0"
 categories: [maven]
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/110772590697104801292?rel=author"
-    image: "//lh5.googleusercontent.com/-E71202WELNQ/AAAAAAAAAAI/AAAAAAAAFpc/WOK-9QEPzDQ/s512-c/photo.jpg"
+comments: true
 published: "false"
 ---
 
