--- a/_posts/DRAFT-Netty-vs.html
+++ b/_posts/DRAFT-Netty-vs.html
@@ -12,10 +12,7 @@ blogger:
     postid: "1676158771405142354"
     comments: "0"
 categories: 
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/100333702426456197655?rel=author"
-    image: "http://img2.blogblog.com/img/b16-rounded.gif"
+comments: true
 published: "false"
 ---
 
