--- a/_posts/DRAFT-Segregating-storage-nodes-in-Oracle-Coherence.html
+++ b/_posts/DRAFT-Segregating-storage-nodes-in-Oracle-Coherence.html
@@ -12,10 +12,7 @@ blogger:
     postid: "7432385699641778841"
     comments: "0"
 categories: 
-author: 
-    name: "Anatoliy Sokolenko"
-    url: "https://plus.google.com/100333702426456197655?rel=author"
-    image: "http://img2.blogblog.com/img/b16-rounded.gif"
+comments: true
 published: "false"
 ---
 
