--- a/_posts/2010-05-13-xml-shema-pojo-maven.html
+++ b/_posts/2010-05-13-xml-shema-pojo-maven.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "3886033543297407183"
     comments: "0"
-categories: [java, jaxb, maven, blog]
+tags: [java, jaxb, maven]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
