--- a/_posts/2010-05-21-flex.html
+++ b/_posts/2010-05-21-flex.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "1935664927010213921"
     comments: "0"
-categories: [flex, функциональное программирование, blog]
+tags: [flex, функциональное программирование]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
