--- a/_posts/2010-05-26-java.html
+++ b/_posts/2010-05-26-java.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7169022346012539431"
     comments: "0"
-categories: [blog]
+tags: []
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
