--- a/_posts/2011-10-05-rest.html
+++ b/_posts/2011-10-05-rest.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "6095342783124106002"
     comments: "0"
-categories: [HTTP, REST, blog]
+tags: [HTTP, REST]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
