--- a/_posts/DRAFT-Cascades-in-JPA2-Hibernate.html
+++ b/_posts/DRAFT-Cascades-in-JPA2-Hibernate.html
@@ -11,9 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "2929615441281782441"
     comments: "0"
-categories: [Java JPA Hibernate]
+tags: [Java JPA Hibernate]
 comments: true
 published: "false"
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
