--- a/_posts/DRAFT-Word-Race-released.html
+++ b/_posts/DRAFT-Word-Race-released.html
@@ -11,9 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7106028160942856123"
     comments: "0"
-categories: [java, android]
+tags: [java, android]
 comments: true
 published: "false"
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
