--- a/_posts/2010-06-29-opensso-cookie.html
+++ b/_posts/2010-06-29-opensso-cookie.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7483261205902618932"
     comments: "0"
-categories: [java, opensso, openam, blog]
+tags: [java, opensso, openam]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
