--- a/_posts/2010-11-27-blog-post.html
+++ b/_posts/2010-11-27-blog-post.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "2136653079578358197"
     comments: "0"
-categories: [java, spring, blog]
+tags: [java, spring]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
