--- a/_posts/2011-09-05-blog-post.html
+++ b/_posts/2011-09-05-blog-post.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "4151988794901351459"
     comments: "0"
-categories: [ООП, blog]
+tags: [ООП]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
