--- a/_posts/2011-10-14-buggy-for-loop-in-java-vm-6-x64.html
+++ b/_posts/2011-10-14-buggy-for-loop-in-java-vm-6-x64.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7888394236197116475"
     comments: "0"
-categories: [java, bug, blog]
+tags: [java, bug]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
