--- a/_posts/2011-12-30-nuodb-introduction-video.html
+++ b/_posts/2011-12-30-nuodb-introduction-video.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "3321387836212369083"
     comments: "0"
-categories: [sql, nosql, database, blog]
+tags: [sql, nosql, database]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
