--- a/_posts/2012-08-05-prototyping-with-groovy.html
+++ b/_posts/2012-08-05-prototyping-with-groovy.html
@@ -11,8 +11,9 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7145325113912378974"
     comments: "0"
-categories: [prototype, groovy, blog]
+tags: [prototype, groovy]
 comments: true
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
