--- a/_posts/DRAFT--OpenSSO.html
+++ b/_posts/DRAFT--OpenSSO.html
@@ -14,6 +14,7 @@ blogger:
 categories: 
 comments: true
 published: "false"
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
