--- a/_posts/DRAFT-Java-Options-You-Should-Always-Use-in-Production.html
+++ b/_posts/DRAFT-Java-Options-You-Should-Always-Use-in-Production.html
@@ -11,9 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "3914471379254142365"
     comments: "0"
-categories: [java, production]
+tags: [java, production]
 comments: true
 published: "false"
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
