--- a/_posts/DRAFT-Maven-Command-Line-Interface.html
+++ b/_posts/DRAFT-Maven-Command-Line-Interface.html
@@ -11,9 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "9014699189922860989"
     comments: "0"
-categories: [maven]
+tags: [maven]
 comments: true
 published: "false"
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
