--- a/_posts/DRAFT-What-to-take-into-account-when-analyzing-performance-testing-results.html
+++ b/_posts/DRAFT-What-to-take-into-account-when-analyzing-performance-testing-results.html
@@ -14,6 +14,7 @@ blogger:
 categories: 
 comments: true
 published: "false"
+categories: [blog]
 ---
 
 <div class="css-full-post-content js-full-post-content">
