support sharing for all posts

--- a/_posts/2011-09-12-proxy-product-owner.html
+++ b/_posts/2011-09-12-proxy-product-owner.html
@@ -13,6 +13,7 @@ blogger:
     comments: "1"
 tags: [Outsourcing, Scrum, Agile, Product owner]
 comments: true
+share: true
 categories: [blog]
 ---
 
