hide trash posts and remove navigation

--- a/_posts/2010-05-21-flex.html
+++ b/_posts/2010-05-21-flex.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "1935664927010213921"
     comments: "0"
-tags: [flex, функциональное программирование]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
