--- a/_posts/2010-05-26-java.html
+++ b/_posts/2010-05-26-java.html
@@ -14,7 +14,7 @@ blogger:
 tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
