--- a/_posts/2010-05-27-epson.html
+++ b/_posts/2010-05-27-epson.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "356092024160987214"
     comments: "1"
-tags: [epson, пользовательский интерфейс]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
