--- a/_posts/2010-06-04-factory-method.html
+++ b/_posts/2010-06-04-factory-method.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7809878594235733395"
     comments: "4"
-tags: [java, concurrency]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
