--- a/_posts/2011-02-16-blog-post.html
+++ b/_posts/2011-02-16-blog-post.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "4162018385651196954"
     comments: "1"
-tags: [java, exceptions]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
