--- a/_posts/2011-07-18-unit.html
+++ b/_posts/2011-07-18-unit.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "6981912396432484664"
     comments: "2"
-tags: [unit testing]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
