--- a/_posts/2010-05-21-ldap.html
+++ b/_posts/2010-05-21-ldap.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "4497904825125786296"
     comments: "1"
-tags: [ldap]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
