--- a/_posts/2010-06-05-gwt-spring-framework-30.html
+++ b/_posts/2010-06-05-gwt-spring-framework-30.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "8307570701478000655"
     comments: "2"
-tags: [java, gwt, spring]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
