--- a/_posts/2010-06-29-blog-post_29.html
+++ b/_posts/2010-06-29-blog-post_29.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "6852892814650188531"
     comments: "4"
-tags: [hardware, off topic]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
