--- a/_posts/2010-10-03-gwt.html
+++ b/_posts/2010-10-03-gwt.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "3872258295166107633"
     comments: "2"
-tags: [оптимизация, gwt]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
