--- a/_posts/2010-10-17-maven-3.html
+++ b/_posts/2010-10-17-maven-3.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "7465867751547244566"
     comments: "2"
-tags: [maven]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
