--- a/_posts/2010-11-27-blog-post.html
+++ b/_posts/2010-11-27-blog-post.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "2136653079578358197"
     comments: "0"
-tags: [java, spring]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
