--- a/_posts/2011-05-10-git.html
+++ b/_posts/2011-05-10-git.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "5365623673481931832"
     comments: "1"
-tags: [git, vcs]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
