--- a/_posts/2011-06-01-default-layout-in-grails.html
+++ b/_posts/2011-06-01-default-layout-in-grails.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "276276943925509020"
     comments: "1"
-tags: [sitemesh, templates, grails]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
