--- a/_posts/2011-09-04-blog-post.html
+++ b/_posts/2011-09-04-blog-post.html
@@ -14,7 +14,7 @@ blogger:
 tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
