--- a/_posts/2011-09-12-proxy-product-owner.html
+++ b/_posts/2011-09-12-proxy-product-owner.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "4168399796371521023"
     comments: "1"
-tags: [Outsourcing, Scrum, Agile, Product owner]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
