--- a/_posts/2011-10-05-rest.html
+++ b/_posts/2011-10-05-rest.html
@@ -11,10 +11,10 @@ blogger:
     siteid: "1763451622132357586"
     postid: "6095342783124106002"
     comments: "0"
-tags: [HTTP, REST]
+tags: []
 comments: true
 share: true
-categories: [blog]
+categories: [trash]
 ---
 
 <div class="css-full-post-content js-full-post-content">
